..F....... [ZBX-5142] changed media type field label from 'Description' to 'Name' (Vedmak)
....I..... [ZBX-5314] increased size of autoincrement fields for PostgreSQL database (Sasha)
..F....... [ZBX-1845] added tabs to host massupdate form (Vedmak)

--------------------------------------------------------------------------------
Changes for 2.0.19rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.0.18

2.0.18rc1 was released as 2.0.18 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.18rc1

New features:
A.F....... [ZBX-1357] updated French translation; thanks to Zabbix translators (zalex_ua)

Bug fixes:
....I..... [ZBX-10741] enforced bash usage in mysql.size user parameter configuration script to avoid issues with different default shells; thanks to Timo Lindfors for reporting it (wiper)
........S. [ZBX-10727] fixed timeout being too low when sending configuration data to active proxy (asaveljevs)
........S. [ZBX-10681] fixed loss of trailing whitespace in unquoted function parameters when creating calculated items with low level discovery (wiper)

--------------------------------------------------------------------------------
Changes for 2.0.17

2.0.17rc1 was released as 2.0.17 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.17rc1

New features:
A.F....... [ZBX-1357] updated English (United States), French, Japanese, Korean, Polish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
.......P.. [ZBX-6744] fixed "expression tree is too large (maximum depth 1000)" error when using SQLite3 in a large environment (Sasha)
A.F....... [ZBX-10316] fixed the regular expression preventing from adding web scenario steps (Ivo)
.......PS. [ZBX-10221] fixed MySQL transaction handling when execute query fails (dimir)