@@ -1427,6 +1427,7 @@ Changes for 2.0.19rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-10819] fixed server/proxy compilation error on Solaris 10 (viktors)
 
 --------------------------------------------------------------------------------
 Changes for 2.0.18
